<resources>
    <string name="title_activity_home">home</string>
    <string name="app_name">FAREWAY</string>
    <string name="title_activity_main_fw">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_list">My List</string>
    <string name="more_coupons">More Coupons</string>
    <string name="more_offers">More Offers</string>
    <string name="savings">Savings</string>
    <string name="filter">Filter</string>
    <string name="title_activity_my_list">MyList</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search....</string>
    <string name="GrocerKey">GrocerKey</string>
    <string name="my_tyc">My Thank You Card</string>
    <string name="my_pp">My Personal Prices</string>
    <string name="shoping_list">Shopping List</string>
    <string name="wpa">Weekly Print Ad</string>
    <string name="settings">Settings</string>
    <string name="app_feedback">App Feedback</string>
    <string name="logout">Logout</string>
    <string name="add_item">Add Items</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="sort">Sort</string>
    <string name="activated">Added</string>
    <string name="activate">Activate</string>
    <string name="favourite_deal">Favourite Deal</string>
    <string name="personal_coupon">Personal Coupon</string>
    <string name="regular_price">Everyday Price:</string>
    <string name="save">Savings:</string>
    <string name="upc">UPC:</string>
    <string name="limit">Limit:</string>
    <string name="valid_through">Valid Through:</string>
    <string name="product_details">Product Details</string>
    <string name="saving_title">Here\'s what you have saved since joining Fareway Program!</string>
    <string name="personal_thanku">Personal Thank You:</string>
    <string name="thanku_card">Thank You Card:</string>
    <string name="personal_coupons">Personal Coupons:</string>
    <string name="total_saving">My Total Savings:</string>
    <string name="ptu_saving">Personal Thank You Savings</string>
    <string name="enter_item">Enter One Item Per Line</string>
    <string name="item1">Item 1</string>
    <string name="item2">Item 2</string>
    <string name="item3">Item 3</string>
    <string name="send_my">Send My Shopping List</string>
    <string name="email">Email</string>
    <string name="category">Category</string>
    <string name="recently_added">Recently Added</string>
    <string name="expiring_soonest">Expiring Soonest</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="change_pwd">Change Password</string>
    <string name="wed">Wednesday</string>
    <string name="fri">Friday</string>
    <string name="mon">Monday</string>
    <string name="email_preferences">Email Preferences</string>
    <string name="noInternet">Internet connection not available.</string>
    <string name="ok">Ok</string>
    <string name="alert">Alert</string>
    <string name="input_item">Please enter item name.</string>
    <string name="item_added">Item has been added to your shopping list.</string>
    <string name="filter_by_categories">Filter By Categories</string>
    <string name="filter_clear">Clear Filter</string>
    <string name="filter_by_offer">Filter By Offer</string>
    <string name="categories">Categories</string>
    <string name="offers">Offers</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="email_pref">Email Preferences</string>
    <string name="prefer_store">Preferred Store</string>
    <string name="tyc">Thank You Card</string>
    <string name="my_pref">My Preferences</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="tycn">Thank You Card Number</string>
    <string name="add_tyc">Additional Thank You Card</string>
    <string name="input_fname">Please enter first name.</string>
    <string name="input_lname">Please enter last name.</string>
    <string name="input_tycn">Please enter thank you card number.</string>
    <string name="tycn_added">Thank you card has been added successfully.</string>
    <string name="name">Name</string>
    <string name="tyc_">TYC#</string>
    <string name="remove">Remove</string>
    <string name="store">Store:</string>
    <string name="select_city">Select City:</string>
    <string name="_city">City*</string>
    <string name="plz_select_city">Please select city.</string>
    <string name="select_store">Select Store:</string>
    <string name="_prefer_store">Preferred Store*</string>
    <string name="plz_select_pref_store">Please select preferred strore.</string>
    <string name="change_prefer_store">Change Preferred Store</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="zipcode">Zip Code</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="answer_">Answer*</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="home_address">Home Address</string>
    <string name="secret_question">Secret Question</string>
    <string name="edit_personal_settings">Edit Personal Settings</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="select_qus">--Select Secret Question--</string>
    <string name="plz_select_qus">Please select secret question.</string>
    <string name="qus1">What is your childhood pet\'s name?</string>
    <string name="qus2">What was your High Scool Mascot?</string>
    <string name="qus3">What is your mothrs middle name?</string>
    <string name="qus4">In what city were you born?</string>
    <string name="qus5">What is the model of the first car you owned?</string>
    <string name="qus6">In what city/town does your nearest sibling live?</string>
    <string name="qus7">What\'s the name of your primary/elementary school?</string>
    <string name="participate_items">Participating Items</string>
    <string name="input_email">Enter Your Email</string>
    <string name="input_pwd">Enter Your Password</string>
    <string name="signin">Sign In</string>
    <string name="forgot_support">Forgot Password | Support</string>
    <string name="plz_input_email">Please enter email.</string>
    <string name="plz_input_val_email">Please enter valid email.</string>
    <string name="plz_input_pwd">Please enter password.</string>
    <string name="plz_input_cnf_pwd">Please enter confirm password.</string>
    <string name="pwd_not_match">Password &amp; Confirm Password do not match.</string>
    <string name="ask_logout">Do you really want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="my_personal_info">My Personal Information</string>
    <string name="fname_">First Name*</string>
    <string name="lname_">Last Name*</string>
    <string name="card_number_">Card Number*</string>
    <string name="cnf_card_number_">Confirm Card Number*</string>
    <string name="email_">Email*</string>
    <string name="select_issue">--Select an issue type*--</string>
    <string name="brief_desc">Brief Description</string>
    <string name="description">Description</string>
    <string name="brief_desc_">Brief Description*</string>
    <string name="description_">Description*</string>
    <string name="personal_tycs">Personal Thank You Support</string>
    <string name="registration">Registration</string>
    <string name="site_login">Site Login</string>
    <string name="lost_pwd">Lost Password</string>
    <string name="personal_circular">Personal Circular</string>
    <string name="in_store_exp">In Store Experience</string>
    <string name="others">Others</string>
    <string name="phone_recognize">Phone Number Not Recognized</string>
    <string name="isuue_type">Issue Type</string>
    <string name="isuue_type_">Issue Type*</string>
    <string name="plz_input_fname">Please enter first name.</string>
    <string name="plz_input_lname">Please enter last name.</string>
    <string name="plz_input_card">Please enter card number.</string>
    <string name="plz_input_cnf_card">Please enter confirm card number.</string>
    <string name="card_not_match">Card Number &amp; Confirm Card Number do not match.</string>
    <string name="plz__select_issue">Please select issue type.</string>
    <string name="personal_ty_reg">Personal Thank You Registration</string>
    <string name="where_do_">Where do I find my Thank You Card Number?</string>
    <string name="my_account">My Account</string>
    <string name="pwd">Password*</string>
    <string name="cnf_pwd">Confirm Password*</string>
    <string name="my_address">My Address</string>
    <string name="street_address">Street Address</string>
    <string name="my_pref_store">My Preferred Store</string>
    <string name="terms_condition">
        By clicking "CREATE MY ACCOUNT" I agree that:
        \n 1. I agree to our Terms and Conditions and Privacy and Security policies.
        \n 2. I may receive cummunications from Fareway and can change my notification preferences in My Account.
        \n 3. I am atleast 18 years old.
    </string>
    <string name="plz_input_ans">Please enter your answer.</string>
    <string name="plz_input_brief">Please enter brief description.</string>
    <string name="plz_input_description">Please enter description.</string>
    <string name="enter_no">Enter number if it won\'t scan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incorrect_credentials">Email or Password is incorrect</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="sign_up">Don\'t have an account? Sign Up</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Plan</string>
    <string name="slide_1_desc">Choose your favorite Fareway store to start saving more on "personalized offers".These are special personal discount on items that you already purchase frequently</string>
    <string name="slide_2_title">Shopping List</string>
    <string name="slide_2_desc">Build a shopping list by activating the personalized special offers from your Personal Circular</string>
    <string name="slide_3_title">Save</string>
    <string name="zip_cod"><font size="15">Zip Code or City, State</font></string>
    <string name="find">Find</string>
    <string name="update">Update</string>
    <string name="error_msg1">You must enter your location.</string>
</resources>