<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:visibility="visible">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            >
            <ImageView
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_120sdp"
                android:id="@+id/imv_logo"
                android:src="@drawable/logo_account"
                android:layout_gravity="center"
                />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="false"
                    style="@style/label_et"
                    android:hint="@string/input_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_8sdp"
                    android:text=""
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                >
                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="false"
                    style="@style/label_et"
                    android:hint="@string/input_pwd"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/_8sdp"
                    android:text=""
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:fontFamily="@font/roboto"
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:background="@drawable/red_bg_rounded_corner"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <TextView
                android:fontFamily="@font/roboto"
                android:id="@+id/tv_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:scrollHorizontally="false"
                style="@style/label_tx"
                android:textSize="@dimen/_14ssp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                />

            <TextView
                android:fontFamily="@font/roboto"
                android:id="@+id/tv_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_support"
                android:scrollHorizontally="false"
                style="@style/label_tx"
                android:textSize="@dimen/_14ssp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                />

        </LinearLayout>




    </LinearLayout>
</RelativeLayout>