<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true">

        <ImageView
            android:id="@+id/close_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/icon_cross"/>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_corner"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="5dp">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_store_title"
            android:textSize="10pt"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/main_title"
            android:layout_marginLeft="10dp"
            android:text="@string/error_msg1"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/store_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_msg"
            android:padding="10dp"
            android:layout_marginTop="7dp">

            <EditText
                android:id="@+id/zip_code_edt"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:hint="@string/zip_cod"
                android:layout_centerVertical="true"
                android:inputType="text"
                android:includeFontPadding="true"
                android:paddingLeft="10dp"
                android:textStyle="normal"
                android:background="@drawable/edit_text_background"/>

            <Button
                android:id="@+id/find_btn"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/find"
                android:textAllCaps="false"
                android:background="@drawable/red_bg_rounded_corner"
                android:textColor="@android:color/white"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/zip_code_edt"
                android:layout_marginRight="5dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/error_msg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/store_layout"
            android:layout_marginLeft="10dp"
            android:visibility="gone"/>
        <Spinner
            android:id="@+id/store_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_msg2"
            android:background="@drawable/spinner_background"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:spinnerMode="dialog"/>

        <Button
            android:id="@+id/update_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/update"
            android:layout_below="@id/store_spinner"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:background="@drawable/red_bg_rounded_corner"
            android:textColor="@android:color/white"/>

    </RelativeLayout >

</RelativeLayout>








