<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SavingFw">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                >

                <TextView
                    android:fontFamily="@font/roboto"
                    android:id="@+id/tv_saving_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saving_title"
                    android:scrollHorizontally="false"
                    style="@style/label_tx"
                    android:padding="@dimen/_2sdp"
                    />


            </LinearLayout>


            <TableLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:padding="@dimen/_5sdp"
                >
                <TableRow>
                    <View android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/grey"
                        android:layout_marginBottom="@dimen/_5sdp"
                        />

                </TableRow>

                <TableRow
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    >
                    <TextView
                        android:fontFamily="@font/roboto"
                        android:id="@+id/tv_pty_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/label_tx"
                        android:text="@string/personal_thanku"
                        android:scrollHorizontally="false"
                        android:layout_weight="1"
                        />


                    <TextView
                        android:fontFamily="@font/roboto"
                        android:id="@+id/tv_pty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/label_tx"
                        android:text="$2.13"
                        android:scrollHorizontally="false"
                        android:layout_weight="1"
                        android:gravity="right"
                        />


                </TableRow>
                <TableRow>
                    <View android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/grey"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        />

                </TableRow>

                <TableRow
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    >
                    <TextView
                        android:fontFamily="@font/roboto"
                        android:id="@+id/tv_tyc_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/label_tx"
                        android:text="@string/thanku_card"
                        android:scrollHorizontally="false"
                        android:layout_weight="1"

                        />
                    <TextView
                        android:fontFamily="@font/roboto"
                        android:id="@+id/tv_tyc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/label_tx"
                        android:text="$1.00"
                        android:scrollHorizontally="false"
                        android:layout_weight="1"
                        android:gravity="right"
                        />


                </TableRow>

                <TableRow>
                    <View android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/grey"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        />

                </TableRow>

                <TableRow
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    >
                    <TextView
                        android:fontFamily="@font/roboto"
                        android:id="@+id/tv_pc_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/label_tx"
                        android:text="@string/personal_coupons"
                        android:scrollHorizontally="false"
                        android:layout_weight="1"

                        />
                    <TextView
                        android:fontFamily="@font/roboto"
                        android:id="@+id/tv_pc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/label_tx"
                        android:text="$0"
                        android:scrollHorizontally="false"
                        android:layout_weight="1"
                        android:gravity="right"
                        />
                </TableRow>
                <TableRow>
                    <View android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/grey"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        />

                </TableRow>



                <TableRow
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    >
                    <TextView
                        android:fontFamily="@font/roboto"
                        android:id="@+id/tv_total_save_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/label_tx"
                        android:text="@string/total_saving"
                        android:scrollHorizontally="false"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:fontFamily="@font/roboto"
                        android:id="@+id/tv_total_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/label_tx"
                        android:text="$109.91"
                        android:scrollHorizontally="false"
                        android:layout_weight="1"
                        android:gravity="right"
                        />
                </TableRow>
                <TableRow>
                    <View android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/grey"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        />

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>